# Datawhale12-cv

./: readme.md
CV/: CMakeLists.txt  main.cpp  test.h
CV/myCV/: CMakeLists.txt  filter.cpp  filter.h  interpolation.cpp  interpolation.h  mycv.h  tColor.cpp  tColor.h  translation.cpp  translation.h  utils.h
CV/task/: 01_resizeTest.h  03_colorTest.h  04_filterTest.h  05_segmentTest.h  06_edgeDetectionTest.h  utils.h
CV/task01/: resizeTest.h
CV/task02/: transTest.h
CV/task03/: colorTest.h
task01/: task01.md
task02/: task02.md
task03/: task03.md
task04/: task04.md
task05/: task05.md
task06/: task06.md
task06/task06.assets/: 2UB7Fj.jpg!web
